--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <nav id="cv-main-menu">
             <ul>
 		    <!-- DARK MODE BUTTON -->
-		    <button id="theme-toggle">Switch to dark mode</button> 
+		  
                 <!-- SIDEBAR MENU ICON -->
                 <li><a href="#" class="cv-menu-button fa fa-bars">Menu</a>
                 </li>
@@ -72,7 +72,7 @@
             <div>
                 <img src="images/photos/img.jpg" alt="">
                 <div id="home-slide-title">
-                    <span>MEHDI</span>
+                    <span>HARSHUL</span>
                 </div>
             </div>
             <!-- 2. SLIDE -->
@@ -96,7 +96,7 @@
         <section class="floor floor-1">
             <div id="home-image">
                 <div id="home-title">
-                    <h1><span class="mobile-title">Mehdi</span><span>AMIRI</span></h1>
+                    <h1><span class="mobile-title">Mehdi</span><span>NIHALANI</span></h1>
                     <!--<p>Director of Photography</p>-->
                 </div>
                 <!-- SOCIAL ICONS -->
@@ -129,8 +129,11 @@
             <!-- PAGE CONTENT -->
             <div class="cv-page-content">
                 <h2 class="border">ABOUT ME</h2>
-                <p>I am an Iranian cinematographer, film director of photographer who has worked with a number of renowned Iranian directors such as Mohsen Makhmalbaf, Hossein Latifi, Dr Hadi Karimi and Manouchehr Hadi. I am one of the top nominees for the Los Angeles Global Festival Cinematographer for the movie Are you Volleyball.
-He began his cinematic career in 1997 with the Assistantship of Light in a Cinematic "Bado Shaghayeh" directed by Seyyed Ziaodin Dorri</p>
+                <p>Hello! I'm currently a second-year BCA student at Presidency University, Bangalore. Proficient in HTML, CSS, and JavaScript, I'm delving into MongoDB and React for advanced web development. My academic foundation comes from DPS Udaipur, where I completed +1 and +2.
+
+                    Beyond studies, I've participated in national kayaking and dragon boat championships, showcasing my competitive spirit. I also enjoy badminton and have a passion for adventurous activities like traveling and trekking.
+                    
+                    What sets me apart is my ability to quickly learn new skills, be it programming languages or outdoor pursuits. Join me on this exciting journey where technology meets creativity, and let's create an innovative future together.</p>
                 <!-- TABLE -->
                 <ul class="cv-table">
                     <li>
