--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section class="floor floor-1">
             <div id="home-image">
                 <div id="home-title">
-                    <h1><span class="mobile-title">Mehdi</span><span>NIHALANI</span></h1>
+                    <h1><span class="mobile-title">Harshul</span><span>NIHALANI</span></h1>
                     <!--<p>Director of Photography</p>-->
                 </div>
                 <!-- SOCIAL ICONS -->
