--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                             <li>
                                 <a href="https://www.instagram.com/mehdiamiri.dop/" class="fa fa-instagram tooltip-social" title="Instagram">Instagram</a>
                             </li>
+                            <li>
+                                <a href="https://serverharsh.000webhostapp.com/" class="fa fa-instagram tooltip-social" title="Instagram">OPEN PRIVATE SERVER</a>
+                            </li>	
                         </ul>
                     </nav>
                 </div>
