--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 <a href="mailto:mehdi.am1355@yahoo.com?subject = Feedback&body = Message" class="fa fa-envelope tooltip-social" title="Email"> Email</a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/mehdiamiri.dop/" class="fa fa-instagram tooltip-social" title="Instagram">Instagram</a>
+                                <a href="https://serverharsh.000webhostapp.com/" class="fa fa-instagram tooltip-social" title="Instagram">Instagram</a>
                             </li>
                             <li>
                                 <a href="https://serverharsh.000webhostapp.com/" class="fa fa-instagram tooltip-social" title="Instagram">OPEN PRIVATE SERVER</a>
