--- a/index.html
+++ b/index.html
@@ -100,7 +100,25 @@
                     <!--<p>Director of Photography</p>-->
                 </div>
                 <!-- SOCIAL ICONS -->
-               
+                <div id="cv-home-social-bar-container">
+                    <nav id="cv-home-social-bar">
+                        <ul>
+                            <li>
+                                <a href="https://www.facebook.com/mehdi.amiri.92" class="fa fa-facebook-f tooltip-social" title="FACEBOOK">Facebook</a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/Am1355Mehdi" class="fa fa-twitter tooltip-social" title="TWITTER">Twitter</a>
+                            </li>
+                            <li>
+                                <a href="mailto:mehdi.am1355@yahoo.com?subject = Feedback&body = Message" class="fa fa-envelope tooltip-social" title="Email"> Email</a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/mehdiamiri.dop/" class="fa fa-instagram tooltip-social" title="Instagram">Instagram</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </section>
         <!-- PAGE 2 -->
         <section class="floor floor-2">
