--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <!-- 2. SLIDE -->
             <img src="images/photos/img3.jpg" alt="">
             <!-- 3. SLIDE -->
-            <img src="images/photos/img4.jpg" alt="">
+            <img src="images/photos/img.jpg" alt="">
             <!-- 4. SLIDE -->
             <img src="images/photos/img5.jpg" alt="">
              <img src="images/photos/b1.jpg" alt="">
