--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <!-- PAGE 3 LINK -->
                 <li class="links-to-floor-li" data-id="3" data-slug="resume"><a href="#resume" class="fa fa-graduation-cap tooltip-menu" title="RESUME">Resume</a>
                 </li>
-                <!-- PAGE 4 LINK -->
+<!--                 <!-- PAGE 4 LINK -->
                 <li class="links-to-floor-li" data-id="4" data-slug="portfolio"><a href="#portfolio" class="fa fa-briefcase tooltip-menu" title="PORTFOLIO">Portfolio</a>
-                </li>
+                </li> -->
                 <!-- PAGE 5 LINK -->
                 <li class="links-to-floor-li" data-id="5" data-slug="contact"><a href="#contact" class="fa fa-send tooltip-menu" title="CONTACT">Contact</a>
                 </li>
