--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <img src="images/photos/img.jpg" alt="">
             <!-- 4. SLIDE -->
             <img src="images/photos/img5.jpg" alt="">
-             <img src="images/photos/b1.jpg" alt="">
+             <img src="images/photos/img.jpg" alt="">
             <!-- 5. SLIDE -->
             <div>
               <!-- GOOGLE MAP -->
@@ -346,7 +346,7 @@ Would you like this as a downloadable HTML file? I can generate one for you too.
 	    <section class="floor floor-5">
     <!-- MOBILE GOOGLE MAP -->
     <div class="img-mobile-only">
-        <img src="images/photos/b1.jpg" alt="" />
+        <img src="images/photos/img.jpg" alt="" />
     </div>
 
     <!-- PAGE CONTENT -->
