--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 <section class="floor floor-3">
 <!-- THIS IMAGE WILL BE DISPLAYED ONLY ON MOBILE MODE ( 1024PX AND BELOW ) -->
 <div class="img-mobile-only">
-    <img src="images/photos/img4-small.jpg" alt="" />
+    <img src="images/photos/img.jpg" alt="" />
 </div>
 <!-- PAGE CONTENT -->
 <div class="cv-page-content">
