--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                             <li>
                                 <a href="https://www.instagram.com/nihalaniharshul/" class="fa fa-instagram tooltip-social" title="Instagram">Instagram</a>
                             </li>
+                            <li>
+                                <a href="http://34.41.124.34:5000/" class="fa fa-instagram tooltip-social" title="private server">Instagram</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
