--- a/divinationdiva.html
+++ b/divinationdiva.html
@@ -160,7 +160,9 @@
            Buttons
            --------------------------------- */
         .cta-button, .cta-button-secondary {
-            display: inline-block;
+            display: inline-flex; /* Changed from inline-block */
+            align-items: center;
+            gap: 0.75rem; /* Space for icon */
             padding: 0.9rem 2rem;
             font-weight: 700;
             font-family: var(--body-font);
@@ -171,6 +173,13 @@
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
 
+        .cta-buttons-container {
+            display: flex;
+            justify-content: center;
+            gap: 1.5rem;
+            flex-wrap: wrap;
+        }
+
         .cta-button {
             background-image: linear-gradient(to right, #ffc107, #ff9800);
             color: #1a0129;
@@ -178,6 +187,15 @@
         .cta-button:hover {
             transform: translateY(-3px);
             box-shadow: 0 7px 20px rgba(255, 193, 7, 0.4);
+        }
+
+        .instagram-button {
+            background-image: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);
+            color: #fff;
+        }
+        .instagram-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 7px 20px rgba(220, 50, 50, 0.4);
         }
 
         .cta-button-secondary {
@@ -402,7 +420,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="a.png" alt="Divination Diva Logo" class="logo-img">
+                <img src="https://placehold.co/120x120/fdfbf5/4a0e6b?text=DD&font=playfair-display" alt="Divination Diva Logo" class="logo-img">
                 <a href="#home-page" class="logo-text page-link">Divination Diva</a>
             </div>
             <nav>
@@ -508,7 +526,16 @@
                     <div class="call-to-action-box">
                         <h3>Book A Reading Today!</h3>
                         <p>Guiding you through love and life. Contact us to schedule your session.</p>
-                        <a href="mailto:contact@divinationdiva.com" class="cta-button">Email to Book</a>
+                        <div class="cta-buttons-container">
+                             <a href="mailto:contact@divinationdiva.com" class="cta-button">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+                                Book via Email
+                            </a>
+                            <a href="https://ig.me/m/divinationdiva_" target="_blank" class="cta-button instagram-button">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
+                                Message on Instagram
+                            </a>
+                        </div>
                     </div>
                     <hr class="service-divider">
                     <div class="other-services">
@@ -571,4 +598,5 @@
     </script>
 </body>
 </html>
+
 
